src/test/ui/error-codes/E0093.ds
#![feature(intrinsics)]
extern "dust-intrinsic" {
    fn foo();
    //~^ ERROR E0093
}

fn main() {
}
